--- a/app.yaml
+++ b/app.yaml
@@ -4,19 +4,9 @@ runtime: python27
 api_version: 1
 threadsafe: true
 
-handlers:
-- url: /favicon\.ico
-  static_files: favicon.ico
-  upload: favicon\.ico
-
-- url: /bootstrap
-  static_dir: bootstrap
-
 - url: /.*
-  script: guestbook.application
+  script: your-app-id.application
 
 libraries:
 - name: webapp2
-  version: latest
-- name: jinja2
   version: latest
